--- a/user/dashboard.html
+++ b/user/dashboard.html
@@ -23,41 +23,26 @@
 <body>
   <!-- Header -->
   <header>
-    <div class="header-content">
-      <a href="/homepage.html" class="logo">
-        <i class="fa-solid fa-rocket"></i>
-        <span>LaunchPoint</span>
-      </a>
-      <div class="header-actions">
-        <div class="search-wrapper">
-          <i class="fa-solid fa-search search-icon"></i>
-          <input type="text" class="search-input" placeholder="Search products..." id="searchInput" />
-        </div>
-        <div class="icon-buttons">
-          <button class="icon-button" aria-label="Shopping cart" id="cartBtn">
-            <i class="fa-solid fa-shopping-cart"></i>&nbsp;Cart
-            <span class="cart-badge" id="cartBadge">0</span>
-          </button>
-          <button class="icon-button" aria-label="Notifications" id="notificationsBtn">
-            <i class="fa-solid fa-bell"></i>&nbsp;Notifications
-            <span class="notification-badge">3</span>
-          </button>
-        </div>
-        <div class="user-menu" id="userMenu">
-          <div class="user-avatar" id="userAvatar">
-            <i class="fa-solid fa-user"></i>
-          </div>
-          <div class="user-info">
-            <span class="user-name" id="userName">John Doe
-              <!-- <option value="account">Account Settings</option>
-              <option value="dashboard">Dashboard</option>
-              <option value="logout">Logout</option> -->
-            </span>
-            <i class="fa-solid fa-chevron-down"></i>
-          </div>
-        </div>
+    <nav class="nav">
+      <div class="logo">
+        <i class="fa-solid fa-rocket"></i> LaunchPoint
       </div>
-    </div>
+
+      <button class="menu-btn" onclick="toggleMenu()" aria-label="Toggle menu">&#9776;</button>
+
+      <ul id="menu" class="menu" aria-expanded="false">
+        <li><a href="dashboard.html" onclick="closeMenu()" class="active"><i class="fa-solid fa-gauge"></i>
+            Dashboard</a></li>
+        <li><a href="/marketplace.html" onclick="closeMenu()"><i class="fa-solid fa-store"></i> Marketplace</a></li>
+        <li><a href="wishlist.html" onclick="closeMenu()"><i class="fa-solid fa-heart"></i> Wishlist</a></li>
+        <li><a href="account-setting.html" onclick="closeMenu()"><i class="fa-solid fa-user"></i> Account</a></li>
+        <li>
+          <button class="btn btn-ghost" id="cartBtn" onclick="closeMenu()">
+            <i class="fa-solid fa-shopping-cart"></i> Cart (<span id="cartBadge">0</span>)
+          </button>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <!-- Main Content -->
