--- a/user/messages.html
+++ b/user/messages.html
@@ -23,34 +23,28 @@
 <body>
   <!-- Header -->
   <header>
-    <div class="header-content">
-      <a href="dashboard.html" class="logo">
-        <i class="fa-solid fa-rocket"></i>
-        <span>LaunchPoint</span>
-      </a>
-      <div class="header-actions">
-        <div class="search-wrapper">
-          <i class="fa-solid fa-search search-icon"></i>
-          <input type="text" class="search-input" placeholder="Search messages..." id="searchInput" />
-        </div>
-        <div class="icon-buttons">
-          <button class="icon-button" aria-label="Shopping cart" id="cartBtn">
-            <i class="fa-solid fa-shopping-cart"></i>&nbsp;Cart
-            <span class="cart-badge" id="cartBadge">0</span>
-          </button>
-          <button class="icon-button active" aria-label="Messages">
-            <i class="fa-solid fa-envelope"></i>&nbsp;Messages
-            <span class="message-badge">3</span>
-          </button>
-        </div>
-        <a href="account-setting.html" class="user-menu">
-          <div class="user-avatar" id="userAvatar">
-            <i class="fa-solid fa-user"></i>
-          </div>
-          <span class="user-name" id="userName">John Doe</span>
-        </a>
+    <nav class="nav">
+      <div class="logo">
+        <i class="fa-solid fa-rocket"></i> LaunchPoint
       </div>
-    </div>
+
+      <button class="menu-btn" onclick="toggleMenu()" aria-label="Toggle menu">&#9776;</button>
+
+      <ul id="menu" class="menu" aria-expanded="false">
+        <li><a href="dashboard.html" onclick="closeMenu()"><i class="fa-solid fa-gauge"></i> Dashboard</a></li>
+        <li><a href="/marketplace.html" onclick="closeMenu()"><i class="fa-solid fa-store"></i> Marketplace</a></li>
+        <li><a href="downloads.html" onclick="closeMenu()"><i class="fa-solid fa-download"></i> Downloads</a></li>
+        <li><a href="messages.html" onclick="closeMenu()" class="active"><i class="fa-solid fa-envelope"></i> Messages
+            (3)</a></li>
+        <li><a href="wishlist.html" onclick="closeMenu()"><i class="fa-solid fa-heart"></i> Wishlist</a></li>
+        <li><a href="account-setting.html" onclick="closeMenu()"><i class="fa-solid fa-user"></i> Account</a></li>
+        <li>
+          <button class="btn btn-ghost" id="cartBtn" onclick="closeMenu()">
+            <i class="fa-solid fa-shopping-cart"></i> Cart (<span id="cartBadge">0</span>)
+          </button>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <!-- Main Content -->
